<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.user.UserFragment">

    <ImageView
        android:id="@+id/userProfileImage"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profileImageContentDescription" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/userProfileImage"
        app:layout_constraintStart_toStartOf="@id/userProfileImage"
        app:layout_constraintTop_toBottomOf="@id/userProfileImage"
        tools:text="John Smith" />

    <TextView
        android:id="@+id/twitter"
        android:layout_width="100dp"
        android:layout_height="20dp"
        app:drawableStartCompat="@drawable/twitter2"
        tools:text="\@johnsmith"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/instagram"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <TextView
        android:id="@+id/instagram"
        android:layout_width="100dp"
        android:layout_height="20dp"
        app:drawableStartCompat="@drawable/instagram2"
        tools:text="\@johnsmith"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/twitter"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="instagram, twitter"/>

    <TextView
        android:id="@+id/bioLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bioLabel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        tools:text="@string/sampleBio"
        android:textColor="@color/white"
        android:maxLines="3"
        android:ellipsize="end"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bioLabel"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".40" />

    <TextView
        android:id="@+id/myPhotosLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:text="@string/myPhotosLabel"
        android:textColor="@color/white"
        android:textSize="18sp"

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myPhotosLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userPhotosRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:clipToPadding="false"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myPhotosLabel"
        tools:itemCount="4"
        tools:listitem="@layout/photo_item"
        tools:ignore="RtlSymmetry" />

    <ProgressBar
        android:id="@+id/loadingAnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myPhotosLabel"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loadErrorMessage"
        android:textColor="@color/white"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>